--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
     height:100vh;
     padding:0;
+    margin:0;
     display: flex;
     flex-direction:column;
     font-family: Roboto, sans-serif;
