--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ li{
 .hero{
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
+    justify-content:space-around;
     gap:30px;
     padding: 80px;
 
@@ -119,6 +119,7 @@ li{
 
 .hero-left{
     text-align:left;
+    margin-left:15%;
 }
 
 .hero-text{
@@ -132,6 +133,7 @@ li{
     height: auto;
     width: 256px;
     padding-right:2rem;
+    margin-right:15%;
 }
 
 .main-container{
